# atlas-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: seed.py
docs/: AUDIT.md  DEPLOY.md  PROJECT_PLAN.md
eval/: __init__.py  cases.py  run.py
mcp_servers/docgen/: server.py
mcp_servers/py_sandbox/: sandbox.py  server.py
mcp_servers/sql_exec/: server.py
mcp_servers_ts/: package.json
mcp_servers_ts/src/: server.ts
orchestrator/: __init__.py  agent.py  config.py  guardrails.py  mcp_client.py  memory.py  serve.py
scripts/: demo.py
tests/: test_agent.py  test_guardrails.py  test_memory.py  test_sandbox.py
ui/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: Chat.tsx  api.ts  main.tsx  styles.css
