[project]
name = "atlas-agent"
version = "0.1.0"
description = "MCP-native agentic workspace assistant: sandboxed SQL/Python, guardrails, memory, docgen."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.39.0",
    "duckdb>=1.1.0",
    "jsonschema>=4.21.0",
    "pydantic>=2.6.0",
    "python-pptx>=0.6.23",
    "reportlab>=4.1.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["orchestrator", "eval"]
